@@ -1,3 +1,9 @@
+2010-02-17 Jerome Pasquier  <rainbru@free.fr>
+
+	* rb_dirtyflag.m4: Handles the --disable-dirty-flag option.
+	* rb_freetype.m4 (RB_CHECK_FREETYPE): Moved from acinclude.m4 to
+	this file.
+	
 2009-03-18  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* gettext.m4: New file, from gettext-0.17.
